<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.add_card_screen.AddCardScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                app:elevation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_back_ios_new_24" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />


                        <ImageView
                            android:id="@+id/ivAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/baseline_add_circle_outline_25" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/str_rf"
                            android:textColor="@color/purple"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/str_karta_qoshish"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/str_karta_malumotlari"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:elevation="4dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/str_karta_raqami"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/etCardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edittxt_rounded"
                        android:drawableEnd="@drawable/ic_scan"
                        android:hint="0000 0000 0000 0000"
                        android:inputType="number"
                        android:maxLength="19"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:mask="#### #### #### ####" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/str_amal_qilish_sanasi"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/etExpireDate"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/edittxt_rounded"
                        android:hint="OO/YY"
                        android:inputType="number"
                        android:maxLength="5"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:mask="##/##" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <Button
            android:id="@+id/bContinue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded"
            android:enabled="false"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/str_davom_etish"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>